<resources>
    <string name="app_name">Günlük</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="arama">Arama</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="mainPage">Ana Sayfa</string>
    <string name="g_nl_k">Günlük</string>
    <string name="selectDate">Lütfen Saat ve Gün Seçin</string>
    <string name="reminder">Hatırlatıcı Başarıyla Ayarlandı.</string>
    <string name="areYouSure">Emin misiniz?</string>
    <string name="AllDatas">Bütün verileriniz silinecek emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="dataDeleted">Verileriniz başarıyla silindi.</string>
    <string name="no">Hayır</string>
    <string name="cancelled">Silme işlemi iptal edildi.</string>
    <string name="wrongPassword">Şifreniz yanlış lütfen tekrar deneyin...</string>
    <string name="changedPassword">Şifreniz Başarıyla Değişti...</string>
    <string name="pleaseEnterTrue">Lütfen Şifreyi Doğru Oluşturun</string>
    <string name="passCreated">Şifreniz Başarıyla Oluşturuldu</string>
    <string name="createPass">Lütfen Şifre Oluşturun</string>
    <string name="title">Başlık...</string>
    <string name="startWriting">Yazmaya Başlayın...</string>
    <string name="Time">Saat Seçin</string>
    <string name="date">Tarih Seçin</string>
    <string name="setReminder">Hatırlatıcı Kur</string>
    <string name="l_tfen_ifrenizi_giriniz">Lütfen Şifrenizi Giriniz</string>
    <string name="l_tfen_eski_ifrenizi_girin">Lütfen Eski Şifrenizi Girin</string>
    <string name="l_tfen_yeni_ifrenizi_girin">Lütfen Yeni Şifrenizi Girin</string>
    <string name="l_tfen_ifrenizi_olu_turun">Lütfen Şifrenizi Oluşturun</string>
    <string name="devam_et">Devam et</string>
    <string name="ifre_de_i_tir">Şifre Değiştir</string>
    <string name="karanl_k_mod">Karanlık Mod</string>
    <string name="hat_rlat_c">Hatırlatıcı</string>
    <string name="programdaki_b_t_n_verileri_sil">Programdaki Bütün Verileri Sil</string>
    <string name="gizlilik_politikas">Gizlilik Politikası</string>
    <string name="uygulamaya_puan_ver">Uygulamaya Puan Ver</string>
    <string name="ara">Ara</string>
</resources>